# currency

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt
account_cryptocurrency/: README.rst  __manifest__.py
account_fx_spot/: README.rst  __manifest__.py
currency_iso_4217/: __manifest__.py
currency_monthly_rate/: README.rst  __manifest__.py
currency_old_rate_notify/: README.rst  __manifest__.py
currency_rate_check/: __manifest__.py
currency_rate_date_check/: README.rst  __init__.py  __manifest__.py  __openerp__.py
currency_rate_inverted/: README.rst  __manifest__.py
currency_rate_update/: README.rst  __manifest__.py  __openerp__.py
currency_rate_update_boi/: __manifest__.py
currency_rate_update_ch_admin/: README.rst  __manifest__.py
currency_rate_update_cmc/: README.rst  __manifest__.py
currency_rate_update_db/: README.rst  __init__.py  __manifest__.py
currency_rate_update_free_currencyconverterapi/: README.rst  __manifest__.py
currency_rate_update_hr_hnb/: README.rst  __manifest__.py
currency_rate_update_nbp/: __manifest__.py
currency_rate_update_nbu/: README.rst  __manifest__.py
currency_rate_update_oxr/: README.rst  __manifest__.py
currency_rate_update_tcmb/: README.rst  __init__.py  __manifest__.py
currency_rate_update_transferwise/: README.rst  __manifest__.py
currency_rate_update_vietcombank/: README.rst  __manifest__.py
currency_rate_update_xe/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+545 files in other folders)
