[project]
name = "odoo-addons-oca-currency"
version = "17.0.20240415.0"
dependencies = [
    "odoo-addon-currency_rate_update>=17.0dev,<17.1dev",
    "odoo-addon-currency_rate_update_xe>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
